mongoose/mongoose.h

typedef __int64 int64_t;
typedef unsigned __int64 uint64_t;
typedef unsigned char uint8_t;
typedef unsigned short uint16_t;
typedef unsigned int uint32_t;
typedef enum { false = 0, true = 1 } bool;
struct mg_str {
  const char *ptr;  
  size_t len;       
};
#define mg_str(s) mg_str_s(s)
EXPORT struct mg_str mg_str(const char *s);
typedef void (*mg_pfn_t)(char, void *);                  
EXPORT size_t mg_vxprintf(void (*)(char, void *), void *, const char *fmt, va_list *);
EXPORT size_t mg_xprintf(void (*fn)(char, void *), void *, const char *fmt, ...);
EXPORT size_t mg_print_base64(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_esc(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_hex(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip_port(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip4(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip6(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_mac(void (*out)(char, void *), void *arg, va_list *ap);
struct mg_timer {
  unsigned long id;         
  uint64_t period_ms;       
  uint64_t expire;          
  unsigned flags;           
#define MG_TIMER_ONCE 0     
#define MG_TIMER_REPEAT 1   
#define MG_TIMER_RUN_NOW 2  
  void (*fn)(void *);       
  void *arg;                
  struct mg_timer *next;    
};
EXPORT void mg_timer_init(struct mg_timer **head, struct mg_timer *timer,
                   uint64_t milliseconds, unsigned flags, void (*fn)(void *),
                   void *arg);
struct mg_fs {
  int (*st)(const char *path, size_t *size, time_t *mtime);  
  void (*ls)(const char *path, void (*fn)(const char *, void *), void *);
  void *(*op)(const char *path, int flags);             
  void (*cl)(void *fd);                                 
  size_t (*rd)(void *fd, void *buf, size_t len);        
  size_t (*wr)(void *fd, const void *buf, size_t len);  
  size_t (*sk)(void *fd, size_t offset);                
  bool (*mv)(const char *from, const char *to);         
  bool (*rm)(const char *path);                         
  bool (*mkd)(const char *path);                        
};
struct mg_addr;
struct mg_iobuf {
  unsigned char *buf;  
  size_t size;         
  size_t len;          
  size_t align;        
};
struct mg_connection;
typedef void (*mg_event_handler_t)(struct mg_connection *, int ev,
                                   void *ev_data, void *fn_data);
struct mg_dns {
  const char *url;          
  struct mg_connection *c;  
};
struct mg_addr {
  uint8_t ip[16];  
  uint16_t port;   
  bool is_ip6;     
};
struct mg_mgr {
  struct mg_connection *conns;  
  struct mg_dns dns4;           
  struct mg_dns dns6;           
  int dnstimeout;               
  bool use_dns6;                
  unsigned long nextid;         
  unsigned long timerid;        
  void *userdata;               
  void *tls_ctx;                
  uint16_t mqtt_id;             
  void *active_dns_requests;    
  struct mg_timer *timers;      
  int epoll_fd;                 
  void *priv;                   
  size_t extraconnsize;         
#if MG_ENABLE_FREERTOS_TCP
  SocketSet_t ss;  
#endif
};
struct mg_connection {
  struct mg_connection *next;  
  struct mg_mgr *mgr;          
  struct mg_addr loc;          
  struct mg_addr rem;          
  void *fd;                    
  unsigned long id;            
  struct mg_iobuf recv;        
  struct mg_iobuf send;        
  mg_event_handler_t fn;       
  void *fn_data;               
  mg_event_handler_t pfn;      
  void *pfn_data;              
  char data[MG_DATA_SIZE];     
  void *tls;                   
  unsigned is_listening : 1;   
  unsigned is_client : 1;      
  unsigned is_accepted : 1;    
  unsigned is_resolving : 1;   
  unsigned is_arplooking : 1;  
  unsigned is_connecting : 1;  
  unsigned is_tls : 1;         
  unsigned is_tls_hs : 1;      
  unsigned is_udp : 1;         
  unsigned is_websocket : 1;   
  unsigned is_mqtt5 : 1;       
  unsigned is_hexdumping : 1;  
  unsigned is_draining : 1;    
  unsigned is_closing : 1;     
  unsigned is_full : 1;        
  unsigned is_resp : 1;        
  unsigned is_readable : 1;    
  unsigned is_writable : 1;    
};
EXPORT struct mg_timer *mg_timer_add(struct mg_mgr *mgr, uint64_t milliseconds,
                              unsigned flags, void (*fn)(void *), void *arg);
struct mg_http_header {
  struct mg_str name;   
  struct mg_str value;  
};
struct mg_http_message {
  struct mg_str method, uri, query, proto;             
  struct mg_http_header headers[MG_MAX_HTTP_HEADERS];  
  struct mg_str body;                                  
  struct mg_str head;                                  
  struct mg_str chunk;    
  struct mg_str message;  
};
struct mg_http_serve_opts {
  const char *root_dir;       
  const char *ssi_pattern;    
  const char *extra_headers;  
  const char *mime_types;     
  const char *page404;        
  struct mg_fs *fs;           
};
struct mg_ws_message {
  struct mg_str data;  
  uint8_t flags;       
};
EXPORT struct mg_connection *mg_ws_connect(struct mg_mgr *, const char *url,
                                    mg_event_handler_t fn, void *fn_data,
                                    const char *fmt, ...);
EXPORT void mg_ws_upgrade(struct mg_connection *, struct mg_http_message *,
                   const char *fmt, ...);
EXPORT size_t mg_ws_send(struct mg_connection *, const void *buf, size_t len, int op);
EXPORT size_t mg_ws_wrap(struct mg_connection *, size_t len, int op);
EXPORT size_t mg_ws_printf(struct mg_connection *c, int op, const char *fmt, ...);
EXPORT size_t mg_ws_vprintf(struct mg_connection *c, int op, const char *fmt,
                     va_list *);
EXPORT struct mg_connection *mg_sntp_connect(struct mg_mgr *mgr, const char *url,
                                      mg_event_handler_t fn, void *fn_data);
EXPORT void mg_sntp_request(struct mg_connection *c);
EXPORT int64_t mg_sntp_parse(const unsigned char *buf, size_t len);
enum {
  MQTT_PROP_TYPE_BYTE,
  MQTT_PROP_TYPE_STRING,
  MQTT_PROP_TYPE_STRING_PAIR,
  MQTT_PROP_TYPE_BINARY_DATA,
  MQTT_PROP_TYPE_VARIABLE_INT,
  MQTT_PROP_TYPE_INT,
  MQTT_PROP_TYPE_SHORT
};
enum { MQTT_OK, MQTT_INCOMPLETE, MQTT_MALFORMED };
struct mg_mqtt_prop {
  uint8_t id;         
  uint32_t iv;        
  struct mg_str key;  
  struct mg_str val;  
};
struct mg_mqtt_opts {
  struct mg_str user;               
  struct mg_str pass;               
  struct mg_str client_id;          
  struct mg_str topic;              
  struct mg_str message;            
  uint8_t qos;                      
  uint8_t version;                  
  uint16_t keepalive;               
  bool retain;                      
  bool clean;                       
  struct mg_mqtt_prop *props;       
  size_t num_props;                 
  struct mg_mqtt_prop *will_props;  
  size_t num_will_props;            
};
struct mg_mqtt_message {
  struct mg_str topic;  
  struct mg_str data;   
  struct mg_str dgram;  
  uint16_t id;          
  uint8_t cmd;          
  uint8_t qos;          
  uint8_t ack;          
  size_t props_start;   
  size_t props_size;    
};
EXPORT struct mg_connection *mg_mqtt_connect(struct mg_mgr *, const char *url,
                                      const struct mg_mqtt_opts *opts,
                                      mg_event_handler_t fn, void *fn_data);
EXPORT struct mg_connection *mg_mqtt_listen(struct mg_mgr *mgr, const char *url,
                                     mg_event_handler_t fn, void *fn_data);
EXPORT void mg_mqtt_login(struct mg_connection *c, const struct mg_mqtt_opts *opts);
EXPORT void mg_mqtt_pub(struct mg_connection *c, const struct mg_mqtt_opts *opts);
EXPORT void mg_mqtt_sub(struct mg_connection *, const struct mg_mqtt_opts *opts);
EXPORT int mg_mqtt_parse(const uint8_t *, size_t, uint8_t, struct mg_mqtt_message *);
EXPORT void mg_mqtt_send_header(struct mg_connection *, uint8_t cmd, uint8_t flags,
                         uint32_t len);
EXPORT void mg_mqtt_ping(struct mg_connection *);
EXPORT void mg_mqtt_pong(struct mg_connection *);
EXPORT void mg_mqtt_disconnect(struct mg_connection *, const struct mg_mqtt_opts *);
EXPORT size_t mg_mqtt_next_prop(struct mg_mqtt_message *, struct mg_mqtt_prop *,
                         size_t ofs);
struct mg_dns_message {
  uint16_t txnid;       
  bool resolved;        
  struct mg_addr addr;  
  char name[256];       
};
struct mg_dns_header {
  uint16_t txnid;  
  uint16_t flags;
  uint16_t num_questions;
  uint16_t num_answers;
  uint16_t num_authority_prs;
  uint16_t num_other_prs;
};
struct mg_dns_rr {
  uint16_t nlen;    
  uint16_t atype;   
  uint16_t aclass;  
  uint16_t alen;    
};
EXPORT void mg_resolve(struct mg_connection *, const char *url);
EXPORT void mg_resolve_cancel(struct mg_connection *);
EXPORT bool mg_dns_parse(const uint8_t *buf, size_t len, struct mg_dns_message *);
EXPORT size_t mg_dns_parse_rr(const uint8_t *buf, size_t len, size_t ofs,
                       bool is_question, struct mg_dns_rr *);
enum { MG_JSON_TOO_DEEP = -1, MG_JSON_INVALID = -2, MG_JSON_NOT_FOUND = -3 };
EXPORT int mg_json_get(struct mg_str json, const char *path, int *toklen);
EXPORT bool mg_json_get_num(struct mg_str json, const char *path, double *v);
EXPORT bool mg_json_get_bool(struct mg_str json, const char *path, bool *v);
EXPORT long mg_json_get_long(struct mg_str json, const char *path, long dflt);
EXPORT char *mg_json_get_str(struct mg_str json, const char *path);
EXPORT char *mg_json_get_hex(struct mg_str json, const char *path, int *len);
EXPORT char *mg_json_get_b64(struct mg_str json, const char *path, int *len);
EXPORT bool mg_json_unescape(struct mg_str str, char *buf, size_t len);
struct mg_rpc_req {
  struct mg_rpc **head;  
  struct mg_rpc *rpc;    
  mg_pfn_t pfn;          
  void *pfn_data;        
  void *req_data;        
  struct mg_str frame;   
};
struct mg_rpc {
  struct mg_rpc *next;              
  struct mg_str method;             
  void (*fn)(struct mg_rpc_req *);  
  void *fn_data;                    
};
EXPORT void mg_rpc_add(struct mg_rpc **head, struct mg_str method_pattern,
                void (*handler)(struct mg_rpc_req *), void *handler_data);
EXPORT void mg_rpc_del(struct mg_rpc **head, void (*handler)(struct mg_rpc_req *));
EXPORT void mg_rpc_process(struct mg_rpc_req *);
EXPORT void mg_rpc_ok(struct mg_rpc_req *, const char *fmt, ...);
EXPORT void mg_rpc_vok(struct mg_rpc_req *, const char *fmt, va_list *ap);
EXPORT void mg_rpc_err(struct mg_rpc_req *, int code, const char *fmt, ...);
EXPORT void mg_rpc_verr(struct mg_rpc_req *, int code, const char *fmt, va_list *);
EXPORT void mg_rpc_list(struct mg_rpc_req *r);