module_windows.jai


mg_ws_message :: struct {
    data:  mg_str; // Websocket message data
    flags: u8; // Websocket message flags
}

mg_ws_connect_CFormat :: (unknown0: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void, fmt: *u8, __args: ..Any) -> *mg_connection #foreign mongoose "mg_ws_connect";
mg_ws_connect :: (unknown0: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void, fmt: string, __args: ..Any) -> *mg_connection {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    return mg_ws_connect_CFormat(unknown0, url, fn, fn_data, "%s", formatted_text.data);
} @PrintLike

mg_ws_upgrade_CFormat :: (unknown0: *mg_connection, unknown1: *mg_http_message, fmt: *u8, __args: ..Any) -> void #foreign mongoose "mg_ws_upgrade";
mg_ws_upgrade :: (unknown0: *mg_connection, unknown1: *mg_http_message, fmt: string, __args: ..Any) {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    mg_ws_upgrade_CFormat(unknown0, unknown1, "%s", formatted_text.data);
} @PrintLike

mg_ws_send :: (unknown0: *mg_connection, buf: *void, len: u64, op: s32) -> u64 #foreign mongoose;

mg_ws_wrap :: (unknown0: *mg_connection, len: u64, op: s32) -> u64 #foreign mongoose;

mg_ws_printf_CFormat :: (c: *mg_connection, op: s32, fmt: *u8, __args: ..Any) -> u64 #foreign mongoose "mg_ws_printf";
mg_ws_printf :: (c: *mg_connection, op: s32, fmt: string, __args: ..Any) -> u64 {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    return mg_ws_printf_CFormat(c, op, "%s", formatted_text.data);
} @PrintLike

mg_ws_vprintf :: (c: *mg_connection, op: s32, fmt: *u8, unknown0: *va_list) -> u64 #foreign mongoose;

mg_sntp_connect :: (mgr: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_sntp_request :: (c: *mg_connection) -> void #foreign mongoose;

mg_sntp_parse :: (buf: *u8, len: u64) -> s64 #foreign mongoose;

mg_now :: () -> u64 #foreign mongoose;

MQTT_PROP_TYPE :: enum s32 {
    BYTE         :: 0;
    STRING       :: 1;
    STRING_PAIR  :: 2;
    BINARY_DATA  :: 3;
    VARIABLE_INT :: 4;
    INT          :: 5;
    SHORT        :: 6;

    MQTT_PROP_TYPE_BYTE         :: BYTE;
    MQTT_PROP_TYPE_STRING       :: STRING;
    MQTT_PROP_TYPE_STRING_PAIR  :: STRING_PAIR;
    MQTT_PROP_TYPE_BINARY_DATA  :: BINARY_DATA;
    MQTT_PROP_TYPE_VARIABLE_INT :: VARIABLE_INT;
    MQTT_PROP_TYPE_INT          :: INT;
    MQTT_PROP_TYPE_SHORT        :: SHORT;
}

MQTT :: enum s32 {
    OK         :: 0;
    INCOMPLETE :: 1;
    MALFORMED  :: 2;
    MQTT_OK         :: OK;
    MQTT_INCOMPLETE :: INCOMPLETE;
    MQTT_MALFORMED  :: MALFORMED;
}

mg_mqtt_prop :: struct {
    id:  u8; // Enumerated at MQTT5 Reference
    iv:  u32; // Integer value for 8-, 16-, 32-bit integers types
    key: mg_str; // Non-NULL only for user property type
    val: mg_str; // Non-NULL only for UTF-8 types and user properties
}

mg_mqtt_opts :: struct {
    user:           mg_str; // Username, can be empty
    pass:           mg_str; // Password, can be empty
    client_id:      mg_str; // Client ID
    topic:          mg_str; // message/subscription topic
    message:        mg_str; // message content
    qos:            u8; // message quality of service
    version:        u8; // Can be 4 (3.1.1), or 5. If 0, assume 4
    keepalive:      u16; // Keep-alive timer in seconds
    retransmit_id:  u16; // For PUBLISH, init to 0
    retain:         bool; // Retain flag
    clean:          bool; // Clean session flag
    props:          *mg_mqtt_prop; // MQTT5 props array
    num_props:      u64; // number of props
    will_props:     *mg_mqtt_prop; // Valid only for CONNECT packet (MQTT5)
    num_will_props: u64; // Number of will props
}

mg_mqtt_message :: struct {
    topic:       mg_str; // Parsed topic for PUBLISH
    data:        mg_str; // Parsed message for PUBLISH
    dgram:       mg_str; // Whole MQTT packet, including headers
    id:          u16; // For PUBACK, PUBREC, PUBREL, PUBCOMP, SUBACK, PUBLISH
    cmd:         u8; // MQTT command, one of MQTT_CMD_*
    qos:         u8; // Quality of service
    ack:         u8; // CONNACK return code, 0 = success
    props_start: u64; // Offset to the start of the properties (MQTT5)
    props_size:  u64; // Length of the properties
}

mg_mqtt_connect :: (unknown0: *mg_mgr, url: *u8, opts: *mg_mqtt_opts, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_mqtt_listen :: (mgr: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_mqtt_login :: (c: *mg_connection, opts: *mg_mqtt_opts) -> void #foreign mongoose;

mg_mqtt_pub :: (c: *mg_connection, opts: *mg_mqtt_opts) -> u16 #foreign mongoose;

mg_mqtt_sub :: (unknown0: *mg_connection, opts: *mg_mqtt_opts) -> void #foreign mongoose;

mg_mqtt_parse :: (unknown0: *u8, unknown1: u64, unknown2: u8, unknown3: *mg_mqtt_message) -> s32 #foreign mongoose;

mg_mqtt_send_header :: (unknown0: *mg_connection, cmd: u8, flags: u8, len: u32) -> void #foreign mongoose;

mg_mqtt_ping :: (unknown0: *mg_connection) -> void #foreign mongoose;

mg_mqtt_pong :: (unknown0: *mg_connection) -> void #foreign mongoose;

mg_mqtt_disconnect :: (unknown0: *mg_connection, unknown1: *mg_mqtt_opts) -> void #foreign mongoose;

mg_mqtt_next_prop :: (unknown0: *mg_mqtt_message, unknown1: *mg_mqtt_prop, ofs: u64) -> u64 #foreign mongoose;

// Mongoose sends DNS queries that contain only one question:
// either A (IPv4) or AAAA (IPv6) address lookup.
// Therefore, we expect zero or one answer.
// If `resolved` is true, then `addr` contains resolved IPv4 or IPV6 address.
mg_dns_message :: struct {
    txnid:    u16; // Transaction ID
    resolved: bool; // Resolve successful, addr is set
    addr:     mg_addr; // Resolved address
    name:     [256] u8; // Host name
}

mg_dns_header :: struct {
    txnid:             u16; // Transaction ID
    flags:             u16;
    num_questions:     u16;
    num_answers:       u16;
    num_authority_prs: u16;
    num_other_prs:     u16;
}

// DNS resource record
mg_dns_rr :: struct {
    nlen:   u16; // Name or pointer length
    atype:  u16; // Address type
    aclass: u16; // Address class
    alen:   u16; // Address length
}

mg_resolve :: (unknown0: *mg_connection, url: *u8) -> void #foreign mongoose;

mg_resolve_cancel :: (unknown0: *mg_connection) -> void #foreign mongoose;

mg_dns_parse :: (buf: *u8, len: u64, unknown0: *mg_dns_message) -> bool #foreign mongoose;

mg_dns_parse_rr :: (buf: *u8, len: u64, ofs: u64, is_question: bool, unknown0: *mg_dns_rr) -> u64 #foreign mongoose;

// Error return values - negative. Successful returns are >= 0
MG_JSON :: enum s32 {
    TOO_DEEP  :: -1;
    INVALID   :: -2;
    NOT_FOUND :: -3;
    MG_JSON_TOO_DEEP  :: TOO_DEEP;
    MG_JSON_INVALID   :: INVALID;
    MG_JSON_NOT_FOUND :: NOT_FOUND;
}

mg_json_get :: (json: mg_str, path: *u8, toklen: *s32) -> s32 #foreign mongoose;

mg_json_get_num :: (json: mg_str, path: *u8, v: *float64) -> bool #foreign mongoose;

mg_json_get_bool :: (json: mg_str, path: *u8, v: *bool) -> bool #foreign mongoose;

mg_json_get_long :: (json: mg_str, path: *u8, dflt: s32) -> s32 #foreign mongoose;

mg_json_get_str :: (json: mg_str, path: *u8) -> *u8 #foreign mongoose;

mg_json_get_hex :: (json: mg_str, path: *u8, len: *s32) -> *u8 #foreign mongoose;

mg_json_get_b64 :: (json: mg_str, path: *u8, len: *s32) -> *u8 #foreign mongoose;

mg_json_unescape :: (str: mg_str, buf: *u8, len: u64) -> bool #foreign mongoose;

// Iterate over object or array elements
mg_json_next :: (obj: mg_str, ofs: u64, key: *mg_str, val: *mg_str) -> u64 #foreign mongoose;

// JSON-RPC request descriptor
mg_rpc_req :: struct {
    head:     **mg_rpc; // RPC handlers list head
    rpc:      *mg_rpc; // RPC handler being called
    pfn:      mg_pfn_t; // Response printing function
    pfn_data: *void; // Response printing function data
    req_data: *void; // Arbitrary request data
    frame:    mg_str; // Request, e.g. {"id":1,"method":"add","params":[1,2]}
}

// JSON-RPC method handler
mg_rpc :: struct {
    next:    *mg_rpc; // Next in list
    method:  mg_str; // Method pattern
    fn:      #type (unknown0: *mg_rpc_req) -> void #c_call; // Handler function
    fn_data: *void; // Handler function argument
}

mg_rpc_add :: (head: **mg_rpc, method_pattern: mg_str, handler: #type (unknown0: *mg_rpc_req) -> void #c_call, handler_data: *void) -> void #foreign mongoose;

mg_rpc_del :: (head: **mg_rpc, handler: #type (unknown0: *mg_rpc_req) -> void #c_call) -> void #foreign mongoose;

mg_rpc_process :: (unknown0: *mg_rpc_req) -> void #foreign mongoose;

// Helper functions to print result or error frame
mg_rpc_ok_CFormat :: (unknown0: *mg_rpc_req, fmt: *u8, __args: ..Any) -> void #foreign mongoose "mg_rpc_ok";
mg_rpc_ok :: (unknown0: *mg_rpc_req, fmt: string, __args: ..Any) {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    mg_rpc_ok_CFormat(unknown0, "%s", formatted_text.data);
} @PrintLike

mg_rpc_vok :: (unknown0: *mg_rpc_req, fmt: *u8, ap: *va_list) -> void #foreign mongoose;

mg_rpc_err_CFormat :: (unknown0: *mg_rpc_req, code: s32, fmt: *u8, __args: ..Any) -> void #foreign mongoose "mg_rpc_err";
mg_rpc_err :: (unknown0: *mg_rpc_req, code: s32, fmt: string, __args: ..Any) {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    mg_rpc_err_CFormat(unknown0, code, "%s", formatted_text.data);
} @PrintLike

mg_rpc_verr :: (unknown0: *mg_rpc_req, code: s32, fmt: *u8, unknown1: *va_list) -> void #foreign mongoose;

mg_rpc_list :: (r: *mg_rpc_req) -> void #foreign mongoose;

// Firmware update API
mg_ota_begin :: (new_firmware_size: u64) -> bool #foreign mongoose;

mg_ota_write :: (buf: *void, len: u64) -> bool #foreign mongoose;

mg_ota_end :: () -> bool #foreign mongoose;

mg_phy :: struct {
    read_reg:  #type (addr: u8, reg: u8) -> u16 #c_call;
    write_reg: #type (addr: u8, reg: u8, value: u16) -> void #c_call;
}

// PHY configuration settings, bitmask
MG_PHY :: enum s32 {
    LEDS_ACTIVE_HIGH :: 1;

    CLOCKS_MAC       :: 2;

    MG_PHY_LEDS_ACTIVE_HIGH :: LEDS_ACTIVE_HIGH;

    MG_PHY_CLOCKS_MAC       :: CLOCKS_MAC;
}

MG_PHY_SPEED :: enum s32 {
    _10M   :: 0;
    _100M  :: 1;
    _1000M :: 2;
    MG_PHY_SPEED_10M   :: _10M;
    MG_PHY_SPEED_100M  :: _100M;
    MG_PHY_SPEED_1000M :: _1000M;
}

mg_phy_init :: (unknown0: *mg_phy, addr: u8, config: u8) -> void #foreign mongoose;

mg_phy_up :: (unknown0: *mg_phy, addr: u8, full_duplex: *bool, speed: *u8) -> bool #foreign mongoose;

dns_data :: struct {
    next:   *dns_data;
    c:      *mg_connection;
    expire: u64;
    txnid:  u16;
}

packed_file :: struct {
    data: *u8;
    size: u64;
    pos:  u64;
}

dirent :: struct {
    d_name: [260] u8;
}

win32_dir :: struct {
    handle: HANDLE;
    info:   WIN32_FIND_DATAW;
    result: dirent;
}

DIR :: win32_dir;

printdirentrydata :: struct {
    c:    *mg_connection;
    hm:   *mg_http_message;
    opts: *mg_http_serve_opts;
    dir:  *u8;
}

mg_mqtt_pmap :: struct {
    id:   u8;
    type: u8;
}
